<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".ChooseService">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/antquai"
        android:text="@string/username"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="522dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/simpleborder"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@color/black"
            android:fontFamily="@font/antquai"
            android:gravity="center"
            android:hint="@string/label"
            android:text="@string/chooseService"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/professionalLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/antquai"
                android:text="@string/professional"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:fontFamily="@font/antquai"
                android:text="@string/professionalName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/service1Btn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_white"
                android:gravity="center"
                android:text="@string/service1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:theme="@style/ButtonTheme" />

            <Button
                android:id="@+id/service2Btn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_white"
                android:gravity="center"
                android:text="@string/service2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:theme="@style/ButtonTheme" />

            <Button
                android:id="@+id/service3Btn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_white"
                android:gravity="center"
                android:text="@string/service3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:theme="@style/ButtonTheme" />

            <Button
                android:id="@+id/service4Btn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_white"
                android:gravity="center"
                android:text="@string/service4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:theme="@style/ButtonTheme" />

            <Button
                android:id="@+id/service5Btn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_white"
                android:gravity="center"
                android:text="@string/service5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:theme="@style/ButtonTheme" />

            <Button
                android:id="@+id/service6Btn"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark_white"
                android:gravity="center"
                android:text="@string/service6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:theme="@style/ButtonTheme" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/backBtn" />

</LinearLayout>